--- a/_columns/Swing_Trading/zh-cn/2024-12-14.md
+++ b/_columns/Swing_Trading/zh-cn/2024-12-14.md
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: >-
-  Why We Targeted Magnificent Seven Stocks As Market Breadth Weakened
+  Why We Targeted Magnificent Seven Stocks As Market Breadth Weakened	为什么我们在市场广度减弱时瞄准 Magnificent Seven 股票
 date: 2024-12-15 10:45 -0800
 image: /assets/img/swing-trading/2024-12-15.jpg
 author: JUSTIN NIELSEN
@@ -11,22 +11,26 @@ author: JUSTIN NIELSEN
 
 
 
-After a hard hit to growth to start this past week, the recovery looks a little lopsided. The [Magnificent Seven](https://www.investors.com/tag/magnificent-seven-stocks/) stocks are once again masking some flat to downward-trending performance in the broader market. Rather than sitting out as most stocks take a break, an alternative is to just go where the strength is — even when it's narrow. To that end, we've been using the Direxion Daily NYSE FANG+ 2X Bull ETF ([FNGG](https://research.investors.com/quote.aspx?symbol=FNGG)) to participate.
+After a hard hit to growth to start this past week, the recovery looks a little lopsided. The [Magnificent Seven](https://www.investors.com/tag/magnificent-seven-stocks/) stocks are once again masking some flat to downward-trending performance in the broader market. Rather than sitting out as most stocks take a break, an alternative is to just go where the strength is — even when it's narrow. To that end, we've been using the Direxion Daily NYSE FANG+ 2X Bull ETF ([FNGG](https://research.investors.com/quote.aspx?symbol=FNGG)) to participate.  
+在上周开始对增长造成沉重打击之后，复苏看起来有点不平衡。[Magnificent Seven](https://www.investors.com/tag/magnificent-seven-stocks/) 股票再次掩盖了大盘中一些持平到下跌趋势的表现。与其在大多数股票休息时坐视不理，不如选择在强项所在的地方——即使它很窄。为此，我们一直在使用 Direxion Daily NYSE FANG+ 2X Bull ETF （[FNGG）](https://research.investors.com/quote.aspx?symbol=FNGG) 参与。
 
 
 
 
-Magnificent Seven Stocks Ride Again
------------------------------------
+Magnificent Seven Stocks Ride Again华丽七只股票再度骑行
+---------------------------------------------
 
 
-With so many ETFs to choose from, there are a lot of options to really home in on a targeted basket of stocks. It's easier to get more of what you want and less of what you don't. Whether you call them the Magnificent Seven Stocks or FANG stocks, there are ETFs that let you target that area when they are working. Technical analysis can be just as useful on these targeted ETFs.
+With so many ETFs to choose from, there are a lot of options to really home in on a targeted basket of stocks. It's easier to get more of what you want and less of what you don't. Whether you call them the Magnificent Seven Stocks or FANG stocks, there are ETFs that let you target that area when they are working. Technical analysis can be just as useful on these targeted ETFs.  
+有这么多 ETF 可供选择，有很多选择可以真正专注于目标一篮子股票。更容易获得更多你想要的东西，而更少你不需要的东西。无论您称它们为 Magnificent Seven Stocks 还是 FANG 股票，都有 ETF 可以让您在它们工作时瞄准该区域。技术分析对这些目标 ETF 同样有用。
 
 
-When the market got its postelection bump, the Magnificent Seven stocks were big beneficiaries **(1)**. But like a lot of stocks, they went through a cooling-off period with a couple of tests of support **(2)**.
+When the market got its postelection bump, the Magnificent Seven stocks were big beneficiaries **(1)**. But like a lot of stocks, they went through a cooling-off period with a couple of tests of support **(2)**.  
+当市场在大选后出现上涨时，华丽七大股票是大受益者 **（1）。**但与许多股票一样，它们经历了一段冷静期，并经历了几次支撑测试 **（2）。**
 
 
-On the bounce **(3)**, we added a leveraged version of the NYSE FANG+ index with the FNGG ETF on [SwingTrader](http://shop.investors.com/offer/splashresponsive.aspx?id=SwingTrader&src=A011LPH) **(4)**. In addition to the original [FANG stocks](https://www.investors.com/tag/fang-stock-news/), it includes more recent heavyweights like **Nvidia** ([NVDA](https://research.investors.com/quote.aspx?symbol=NVDA)), **Broadcom** ([AVGO](https://research.investors.com/quote.aspx?symbol=AVGO)) and **ServiceNow** ([NOW](https://research.investors.com/quote.aspx?symbol=NOW)). Though already concentrated with just 10 stocks, we went with the leveraged version to get a stronger performance if we were right. At the same time, that means paying particular attention to risk management in case the trade doesn't work out.
+On the bounce **(3)**, we added a leveraged version of the NYSE FANG+ index with the FNGG ETF on [SwingTrader](http://shop.investors.com/offer/splashresponsive.aspx?id=SwingTrader&src=A011LPH) **(4)**. In addition to the original [FANG stocks](https://www.investors.com/tag/fang-stock-news/), it includes more recent heavyweights like **Nvidia** ([NVDA](https://research.investors.com/quote.aspx?symbol=NVDA)), **Broadcom** ([AVGO](https://research.investors.com/quote.aspx?symbol=AVGO)) and **ServiceNow** ([NOW](https://research.investors.com/quote.aspx?symbol=NOW)). Though already concentrated with just 10 stocks, we went with the leveraged version to get a stronger performance if we were right. At the same time, that means paying particular attention to risk management in case the trade doesn't work out.  
+在反弹 **（3）** 中，我们在 [SwingTrader](http://shop.investors.com/offer/splashresponsive.aspx?id=SwingTrader&src=A011LPH) 上添加了 NYSE FANG+ 指数的杠杆版本和 FNGG ETF**（4）。**除了最初的 [FANG 股票](https://www.investors.com/tag/fang-stock-news/)外，它还包括 **Nvidia** （[NVDA）、](https://research.investors.com/quote.aspx?symbol=NVDA)**Broadcom** （[AVGO）](https://research.investors.com/quote.aspx?symbol=AVGO) 和 **ServiceNow** （[NOW](https://research.investors.com/quote.aspx?symbol=NOW)） 等最近的重量级股票。虽然已经集中在只有 10 只股票，但如果我们是对的，我们选择了杠杆版本以获得更强的表现。同时，这意味着要特别注意风险管理，以防交易不成功。
 
 
 
@@ -34,7 +38,8 @@ On the bounce **(3)**, we added a leveraged version of the NYSE FANG+ index with
 ---
 
 
-[**This Trader Shares How Risk Management Helped Him Achieve Gains Over 900% This Year**](https://www.investors.com/ibd-videos/videos/player-stats-building-the-dream-technical-theme-for-your-portfolio)
+[**This Trader Shares How Risk Management Helped Him Achieve Gains Over 900% This Year  
+这位交易员分享了风险管理如何帮助他今年实现超过 900% 的收益**](https://www.investors.com/ibd-videos/videos/player-stats-building-the-dream-technical-theme-for-your-portfolio)
 
 
 
@@ -42,45 +47,56 @@ On the bounce **(3)**, we added a leveraged version of the NYSE FANG+ index with
 ---
 
 
-On the technical side, the FNGG ETF cleared recent resistance around 166 when we added with the strong support at its 21-day line.
+On the technical side, the FNGG ETF cleared recent resistance around 166 when we added with the strong support at its 21-day line.  
+在技术面，FNGG ETF 清除了 166 附近的近期阻力位，当时我们在 21 日线处增加了强劲支撑。
 
 
-Add To What's Working
----------------------
+Add To What's Working 添加到正在工作的内容
+--------------------------------
 
 
-If you aren't finding many stocks to buy, sometimes it's best to just add to what you have. As the Magnificent Seven stocks added to their gains, we added to the position **(4)**. But as we started seeing a lot of stocks getting extended, we trimmed back on our oversized positions to reduce our exposure **(5)**. We expected a slight pullback but it never came.
+If you aren't finding many stocks to buy, sometimes it's best to just add to what you have. As the Magnificent Seven stocks added to their gains, we added to the position **(4)**. But as we started seeing a lot of stocks getting extended, we trimmed back on our oversized positions to reduce our exposure **(5)**. We expected a slight pullback but it never came.  
+如果您没有找到很多股票可供购买，有时最好只增加您拥有的股票。随着 Magnificent Seven 股票的涨幅增加，我们增加了头寸 **（4）。**但随着我们开始看到大量股票被扩展，我们削减了大宗仓位以减少我们的敞口 **（5）。**我们预计会出现小幅回调，但从未出现。
 
 
-As easily as we trimmed, we added back to the position when the ETF cleared its highs of the prior two days **(6)**. But it couldn't follow up. So over the next two days we trimmed the position down and eventually exited **(7)**. Again, the expectation was that we most likely needed to pull back more in price.
+As easily as we trimmed, we added back to the position when the ETF cleared its highs of the prior two days **(6)**. But it couldn't follow up. So over the next two days we trimmed the position down and eventually exited **(7)**. Again, the expectation was that we most likely needed to pull back more in price.  
+正如我们调整的那样容易，我们在 ETF 清除前两天的高点时重新加仓 **（6）。**但它无法跟进。因此，在接下来的两天里，我们减少了头寸并最终退出 **（7）。**同样，预期我们很可能需要进一步降低价格。
 
 
 
-But when the Nasdaq composite jumped instead, the Magnificent Seven stocks were again at the forefront and we started a new position again **(8)**.
+But when the Nasdaq composite jumped instead, the Magnificent Seven stocks were again at the forefront and we started a new position again **(8)**.  
+但是，当纳斯达克综合指数反而上涨时，华丽七大股票再次走在前列，我们再次开始了新的定位 **（8）。**
 
 
-It might seem like a lot of work and indecision. Instead, it's bending with the breeze of the market. Incremental adjustments along the way keep you participating as your positions move up. Adding back on positive expectation breakers removes your ego and shows willingness to correct mistakes. Staying where the strength is, and adding when appropriate, is what gets you outperformance over the long run.
+It might seem like a lot of work and indecision. Instead, it's bending with the breeze of the market. Incremental adjustments along the way keep you participating as your positions move up. Adding back on positive expectation breakers removes your ego and shows willingness to correct mistakes. Staying where the strength is, and adding when appropriate, is what gets you outperformance over the long run.  
+这似乎是大量的工作和优柔寡断。相反，它正在随着市场的微风弯曲。在此过程中的增量调整让您随着排名的上升而保持参与。增加积极的期望打破者会消除你的自我，并表现出纠正错误的意愿。保持优势所在，并在适当的时候增加，从长远来看，这是让您跑赢大盘的原因。
 
 
-*More details on past trades are accessible to subscribers and trialists to SwingTrader. [Free trials](http://shop.investors.com/offer/splashresponsive.aspx?id=SwingTrader&src=A011LPH) are available. Follow Nielsen on X, formerly known as Twitter, at [@IBD\_JNielsen](https://twitter.com/IBD_JNielsen).*
+*More details on past trades are accessible to subscribers and trialists to SwingTrader. [Free trials](http://shop.investors.com/offer/splashresponsive.aspx?id=SwingTrader&src=A011LPH) are available. Follow Nielsen on X, formerly known as Twitter, at [@IBD\_JNielsen](https://twitter.com/IBD_JNielsen).  
+SwingTrader 的订阅者和试用者可以访问有关过去交易的更多详细信息。提供[免费试用](http://shop.investors.com/offer/splashresponsive.aspx?id=SwingTrader&src=A011LPH)。在 X 上关注尼尔森，前身为 Twitter，网址为 [@IBD\_JNielsen](https://twitter.com/IBD_JNielsen)。*
 
 
-**YOU MAY ALSO LIKE:**
+**YOU MAY ALSO LIKE: 您可能还喜欢：**
 
 
-[Want To Know Our Swing Trading Strategies? Watch This Weekly Update.](https://www.investors.com/ibd-videos/category/swing-trader-status-update?archive=1)
+[Want To Know Our Swing Trading Strategies? Watch This Weekly Update.  
+想知道我们的波段交易策略吗？观看此每周更新。](https://www.investors.com/ibd-videos/category/swing-trader-status-update?archive=1)
 
 
-[Joe Fahmy Covers How To Improve Your Trading Decisions For Bigger Profits](https://www.investors.com/ibd-videos/videos/two-common-mistakes-investors-make-ahead-news-events)
+[Joe Fahmy Covers How To Improve Your Trading Decisions For Bigger Profits  
+Joe Fahmy 介绍了如何改进您的交易决策以获得更大的利润](https://www.investors.com/ibd-videos/videos/two-common-mistakes-investors-make-ahead-news-events)
 
 
-[How to Smooth Your Equity Curve And Reduce Drawdowns](https://www.investors.com/ibd-videos/videos/taking-out-emotion-how-this-investment-advisor-applies-the-ibd-methodology-in-trading)
+[How to Smooth Your Equity Curve And Reduce Drawdowns  
+如何平滑您的净值曲线并减少回撤](https://www.investors.com/ibd-videos/videos/taking-out-emotion-how-this-investment-advisor-applies-the-ibd-methodology-in-trading)
 
 
-[How Weak Breadth Can Give You An Early Warning For Market Tops](https://www.investors.com/ibd-videos/videos/whats-next-for-supercharged-markets-and-how-to-adjust-your-allocations)
+[How Weak Breadth Can Give You An Early Warning For Market Tops  
+弱广度如何为您提供市场顶部的早期预警](https://www.investors.com/ibd-videos/videos/whats-next-for-supercharged-markets-and-how-to-adjust-your-allocations)
 
 
-[Follow Premarket And After-The-Open Action With IBD Experts](https://get.investors.com/ibd-live/)
+[Follow Premarket And After-The-Open Action With IBD Experts  
+跟随 IBD 专家的盘前和开盘后行动](https://get.investors.com/ibd-live/)
 
 
 
