--- a/_columns/The_Big_Picture/2024-12-16.md
+++ b/_columns/The_Big_Picture/2024-12-16.md
@@ -126,7 +126,7 @@ Not all transport stocks have been underperforming the major equity indexes like
 The gain by UAL has been quite shocking.
 
 
-After the global carrier rolled past a 49.67 [buy point](https://www.investors.com/how-to-invest/investors-corner/chart-reading-basics-how-a-buy-point-marks-a-time-of-opportunity/) on Sept. 12 in a [proper double bottom](https://www.investors.com/how-to-invest/investors-corner/what-is-double-bottom-base-biotech-stocks/), it's really taken off. Gains have at one point exceeded 111%. United Airlines, which closed Monday at 95.48, has flown 131% higher since Jan. 1.
+After the global carrier rolled past a 49.67 [buy point](https://www.investors.com/how-to-invest/investors-corner/chart-reading-basics-how-a-buy-point-marks-a-time-of-opportunity/) on Sept. 12 in a [proper double bottom](https://www.investors.com/how-to-invest/investors-corner/what-is-double-bottom-base-biotech-stocks/), it's really taken off. Gains at one point exceeded 111%. United Airlines, which closed Monday at 95.48, has flown 131% higher since Jan. 1.
 
 
 Delta, which cleared a [five-month cup with handle](https://www.investors.com/how-to-invest/investors-corner/the-basics-how-to-analyze-a-stocks-cup-with-handle/) at 52.45 on Oct. 14, has pierced through the 20%-25% profit zone from the breakout point. [Selling at least some shares into strength](https://www.investors.com/how-to-invest/investors-corner/how-to-build-long-term-profits-in-stocks-take-many-gains-at-20-25/) is a cornerstone of savvy portfolio management. DAL, at 61.05 and trading nearly 3% above its 50-day line, is up 52% for the year.
