--- a/_columns/The_Big_Picture/zh-cn/2024-12-12.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-12-12.md
@@ -1,7 +1,7 @@
 ---
 layout: content
 title: >-
-  Dow Jones Extends Losing Streak, While Small-Cap Stocks Struggle
+  Dow Jones Extends Losing Streak, While Small-Cap Stocks Struggle	道琼斯指数延续连跌势头，小盘股苦苦挣扎
 date: 2024-12-12 17:51 -0800
 author: SCOTT LEHTONEN
 ---
@@ -10,53 +10,30 @@ author: SCOTT LEHTONEN
 
 
 
-Small-cap stocks underperformed Thursday as the Dow Jones Industrial Average extended a losing streak to six sessions — its longest since April.
+Small-cap stocks underperformed Thursday as the Dow Jones Industrial Average extended a losing streak to six sessions — its longest since April.  
+小盘股周四表现不佳，道琼斯工业平均指数（Dow Jones Industrial Average）延续了6个交易日的连跌纪录，这是自4月以来最长的一次下跌。
 
 
-The Dow Jones industrials and S&P 500 both dropped 0.5%, while the tech-heavy Nasdaq composite lost 0.7%. The Russell 2000 index sold off 1.4%.
-
-
-
-
-Volume rose on the Nasdaq, and was lower on the New York Stock Exchange from Wednesday's session. That created a new [distribution day](https://www.investors.com/how-to-invest/investors-corner/stock-market-timing-the-subtle-sign-of-market-tops/) for the Nasdaq, taking its count to three, which matches the S&P 500's distribution.
-
-
-While that number remains tolerable, bears clearly were in control. Declining stocks topped advancers by nearly 3-to-1 on the NYSE and by about 13-to-5 on the Nasdaq, according to FactSet.
-
-
-This week delivered two inflation reports that pretty much cleared the path for a [Federal Reserve rate cut](https://www.investors.com/news/economy/federal-reserve-rate-cut-cpi-ppi-jobless-claims-sp-500/) next week. And policymakers are going to feel much better about cutting rates after Thursday's producer price index, which was hot on the surface but showed tepid inflation in health care services and other categories that feed into the Fed's primary inflation rate.
-
-
-While a rate cut was already virtually a done deal for the Dec. 18 Fed meeting, Thursday's data including a jump in initial jobless claims, lowered the risk that Fed policymakers will offer a hawkish forecast for rate cuts next year when they update quarterly projections next week.
+The Dow Jones industrials and S&P 500 both dropped 0.5%, while the tech-heavy Nasdaq composite lost 0.7%. The Russell 2000 index sold off 1.4%.  
+道琼斯工业指数和标准普尔 500 指数均下跌 0.5%，而以科技股为主的纳斯达克综合指数下跌 0.7%。罗素 2000 指数下跌 1.4%。
 
 
 
 
----
+Volume rose on the Nasdaq, and was lower on the New York Stock Exchange from Wednesday's session. That created a new [distribution day](https://www.investors.com/how-to-invest/investors-corner/stock-market-timing-the-subtle-sign-of-market-tops/) for the Nasdaq, taking its count to three, which matches the S&P 500's distribution.  
+纳斯达克的成交量上升，纽约证券交易所的成交量从周三的交易时段开始走低。这为纳斯达克创造了一个新的[分配日](https://www.investors.com/how-to-invest/investors-corner/stock-market-timing-the-subtle-sign-of-market-tops/)，使其数量达到三个，这与标准普尔 500 指数的分配相匹配。
 
 
-[**Nvidia, Apple And Tesla Highlight How To Handle This Stock Market**](https://www.investors.com/how-to-invest/investors-corner/investing-in-stocks-stock-investing-with-three-step-routine/)
+While that number remains tolerable, bears clearly were in control. Declining stocks topped advancers by nearly 3-to-1 on the NYSE and by about 13-to-5 on the Nasdaq, according to FactSet.  
+虽然这个数字仍然可以容忍，但熊显然处于控制之中。根据 FactSet 的数据，纽约证券交易所下跌的股票以近 3 比 1 的比分领先于上涨的股票，在纳斯达克以约 13 比 5 的比分领先。
 
 
+This week delivered two inflation reports that pretty much cleared the path for a [Federal Reserve rate cut](https://www.investors.com/news/economy/federal-reserve-rate-cut-cpi-ppi-jobless-claims-sp-500/) next week. And policymakers are going to feel much better about cutting rates after Thursday's producer price index, which was hot on the surface but showed tepid inflation in health care services and other categories that feed into the Fed's primary inflation rate.  
+本周发布了两份通胀报告，几乎为美联储下周[降息](https://www.investors.com/news/economy/federal-reserve-rate-cut-cpi-ppi-jobless-claims-sp-500/)扫清了道路。在周四的生产者价格指数公布后，政策制定者对降息的感觉会好得多，该指数表面上很热，但显示医疗保健服务和其他类别的通胀不温不火，这些因素影响了美联储的主要通胀率。
 
 
----
-
-
-Dow Jones Winners And Losers
-----------------------------
-
-
-In the Dow Jones index, **Coca-Cola** ([KO](https://research.investors.com/quote.aspx?symbol=KO)) and **Merck** ([MKR](https://research.investors.com/quote.aspx?symbol=MKR)) were the top performers Thursday, with gains of 1.9% and 1.5%, respectively.
-
-
-On the downside, **UnitedHealth** ([UNH](https://research.investors.com/quote.aspx?symbol=UNH)) and **Caterpillar** ([CAT](https://research.investors.com/quote.aspx?symbol=CAT)) sold off 3.3% and 2.1%, respectively. Their combined point loss was nearly 159 points. **Home Depot** ([HD](https://research.investors.com/quote.aspx?symbol=HD)) also cost the Dow nearly 43 points.
-
-
-The [Magnificent Seven stocks](https://www.investors.com/research/magnificent-seven-stocks-to-buy-and-and-watch/) ended sharply mixed Thursday as the Roundhill Magnificent Seven ETF ([MAGS](https://research.investors.com/quote.aspx?symbol=MAGS)) fell 0.8%. Notably, **Tesla** ([TSLA](https://research.investors.com/quote.aspx?symbol=TSLA)) notched all-time highs, but reversed lower to snap a six-day win streak.
-
-
-The Innovator IBD 50 ([FFTY](https://research.investors.com/quote.aspx?symbol=FFTY)) exchange traded fund declined 1.2%. Despite that, [the IBD 50](https://research.investors.com/stock-lists/ibd-50/) had a number of solid winners on the session, including bitcoin stock **Hut 8 Mining** ([HUT](https://research.investors.com/quote.aspx?symbol=HUT)) and **Robinhood Markets** ([HOOD](https://research.investors.com/quote.aspx?symbol=HOOD)).
+While a rate cut was already virtually a done deal for the Dec. 18 Fed meeting, Thursday's data including a jump in initial jobless claims, lowered the risk that Fed policymakers will offer a hawkish forecast for rate cuts next year when they update quarterly projections next week.  
+虽然在 12 月 18 日的美联储会议上，降息实际上已经敲定，但周四的数据（包括首次申请失业救济人数的跃升）降低了美联储政策制定者在下周更新季度预测时对明年降息做出鹰派预测的风险。
 
 
 
@@ -64,7 +41,8 @@ The Innovator IBD 50 ([FFTY](https://research.investors.com/quote.aspx?symbol=FF
 ---
 
 
-[**After Getting Dethroned By Apple, Nvidia Faces This New Threat**](https://www.investors.com/research/magnificent-seven-stocks-latest-news-market-cap-weighting/)
+[**Nvidia, Apple And Tesla Highlight How To Handle This Stock Market  
+英伟达、苹果和特斯拉重点介绍如何处理这个股票市场**](https://www.investors.com/how-to-invest/investors-corner/investing-in-stocks-stock-investing-with-three-step-routine/)
 
 
 
@@ -72,29 +50,69 @@ The Innovator IBD 50 ([FFTY](https://research.investors.com/quote.aspx?symbol=FF
 ---
 
 
-What Investors Should Do Now
-----------------------------
+Dow Jones Winners And Losers道琼斯赢家和输家
+------------------------------------
+
+
+In the Dow Jones index, **Coca-Cola** ([KO](https://research.investors.com/quote.aspx?symbol=KO)) and **Merck** ([MKR](https://research.investors.com/quote.aspx?symbol=MKR)) were the top performers Thursday, with gains of 1.9% and 1.5%, respectively.  
+在道琼斯指数中，**可口可乐** （[KO）](https://research.investors.com/quote.aspx?symbol=KO) 和**默克** （[MKR](https://research.investors.com/quote.aspx?symbol=MKR)） 周四表现最佳，分别上涨 1.9% 和 1.5%。
+
+
+On the downside, **UnitedHealth** ([UNH](https://research.investors.com/quote.aspx?symbol=UNH)) and **Caterpillar** ([CAT](https://research.investors.com/quote.aspx?symbol=CAT)) sold off 3.3% and 2.1%, respectively. Their combined point loss was nearly 159 points. **Home Depot** ([HD](https://research.investors.com/quote.aspx?symbol=HD)) also cost the Dow nearly 43 points.  
+不利的一面是，**UnitedHealth** （[UNH](https://research.investors.com/quote.aspx?symbol=UNH)） 和 **Caterpillar** （[CAT）](https://research.investors.com/quote.aspx?symbol=CAT) 分别下跌了 3.3% 和 2.1%。他们总共损失了近 159 分。**家得宝** （[HD](https://research.investors.com/quote.aspx?symbol=HD)） 也使道琼斯指数下跌近 43 点。
+
+
+The [Magnificent Seven stocks](https://www.investors.com/research/magnificent-seven-stocks-to-buy-and-and-watch/) ended sharply mixed Thursday as the Roundhill Magnificent Seven ETF ([MAGS](https://research.investors.com/quote.aspx?symbol=MAGS)) fell 0.8%. Notably, **Tesla** ([TSLA](https://research.investors.com/quote.aspx?symbol=TSLA)) notched all-time highs, but reversed lower to snap a six-day win streak.  
+[Magnificent Seven 股票](https://www.investors.com/research/magnificent-seven-stocks-to-buy-and-and-watch/)周四收盘涨跌互现，Roundhill Magnificent Seven ETF （[MAGS](https://research.investors.com/quote.aspx?symbol=MAGS)） 下跌 0.8%。值得注意的是，**特斯拉** （[TSLA）](https://research.investors.com/quote.aspx?symbol=TSLA) 创下历史新高，但逆转走低，结束了连续六天的上涨。
+
+
+The Innovator IBD 50 ([FFTY](https://research.investors.com/quote.aspx?symbol=FFTY)) exchange traded fund declined 1.2%. Despite that, [the IBD 50](https://research.investors.com/stock-lists/ibd-50/) had a number of solid winners on the session, including bitcoin stock **Hut 8 Mining** ([HUT](https://research.investors.com/quote.aspx?symbol=HUT)) and **Robinhood Markets** ([HOOD](https://research.investors.com/quote.aspx?symbol=HOOD)).  
+Innovator IBD 50 （[FFTY）](https://research.investors.com/quote.aspx?symbol=FFTY) 交易所交易基金下跌 1.2%。尽管如此，[IBD 50](https://research.investors.com/stock-lists/ibd-50/) 在盘中还是有许多稳固的赢家，包括比特币股票 **Hut 8 Mining** （[HUT](https://research.investors.com/quote.aspx?symbol=HUT)） 和 **Robinhood Markets** （[HOOD）。](https://research.investors.com/quote.aspx?symbol=HOOD)
+
+
+
+
+---
+
+
+[**After Getting Dethroned By Apple, Nvidia Faces This New Threat  
+在被 Apple 推翻后，Nvidia 面临这一新威胁**](https://www.investors.com/research/magnificent-seven-stocks-latest-news-market-cap-weighting/)
+
+
+
+
+---
+
+
+What Investors Should Do Now投资者现在应该做什么
+--------------------------------------
 
 
 ![market pulse](https://www.investors.com/wp-content/uploads/2024/12/MP121224-261x300.jpg)
 
 
-With the Nasdaq setting another record high this week, and the S&P 500 holding just off its own highs, IBD maintains its recommended exposure level at 80%-100%.
+With the Nasdaq setting another record high this week, and the S&P 500 holding just off its own highs, IBD maintains its recommended exposure level at 80%-100%.  
+随着纳斯达克指数本周再创历史新高，标准普尔 500 指数略低于自己的高点，IBD 将其推荐的风险敞口维持在 80%-100%。
 
 
-However, there is weaker-than-ideal breadth, with the S&P 500's recent gains much stronger compared with its equal-weighted counterpart, the Invesco S&P 500 Equal Weight ([RSP](https://research.investors.com/quote.aspx?symbol=RSP)) ETF. While the S&P is down 0.6% this week, the equal-weight index is down 1.3%.
+However, there is weaker-than-ideal breadth, with the S&P 500's recent gains much stronger compared with its equal-weighted counterpart, the Invesco S&P 500 Equal Weight ([RSP](https://research.investors.com/quote.aspx?symbol=RSP)) ETF. While the S&P is down 0.6% this week, the equal-weight index is down 1.3%.  
+然而，其广度弱于理想水平，标准普尔 500 指数最近的涨幅与其等权重同行景顺标准普尔 500 等权重 （[RSP](https://research.investors.com/quote.aspx?symbol=RSP)） ETF 相比要强得多。虽然标准普尔指数本周下跌 0.6%，但等权重指数下跌 1.3%。
 
 
-Meanwhile, Direxion Nasdaq-100 Equal Weighted ETF ([QQQE](https://research.investors.com/quote.aspx?symbol=QQQE)) failed to hit a new high this week, contrary to QQQ's action. This shows there could be some weakness beneath the surface.
+Meanwhile, Direxion Nasdaq-100 Equal Weighted ETF ([QQQE](https://research.investors.com/quote.aspx?symbol=QQQE)) failed to hit a new high this week, contrary to QQQ's action. This shows there could be some weakness beneath the surface.  
+与此同时，Direxion 纳斯达克 100 等权重 ETF （[QQQE](https://research.investors.com/quote.aspx?symbol=QQQE)） 本周未能创下新高，与 QQQ 的行动相反。这表明表面之下可能存在一些弱点。
 
 
-Ten of the 11 S&P 500 sectors ended lower, with consumer discretionary, health care and communication services falling the most. Consumer staples was the only rising sector on the day.
+Ten of the 11 S&P 500 sectors ended lower, with consumer discretionary, health care and communication services falling the most. Consumer staples was the only rising sector on the day.  
+标准普尔 500 指数的 11 个板块中有 10 个板块收低，其中非必需消费品、医疗保健和通信服务跌幅最大。必需消费品是当天唯一上涨的板块。
 
 
-That means investors should be utilizing diligent [risk management](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/), one of the [four pillars of The IBD Methodology](https://www.investors.com/how-to-invest/investors-corner/stock-market-investing-ibd-methodology/). It's important to monitor positions that are acting out of character and sell any stocks that trigger sell rules.
+That means investors should be utilizing diligent [risk management](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/), one of the [four pillars of The IBD Methodology](https://www.investors.com/how-to-invest/investors-corner/stock-market-investing-ibd-methodology/). It's important to monitor positions that are acting out of character and sell any stocks that trigger sell rules.  
+这意味着投资者应该利用勤奋的[风险管理](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/)，这是 [IBD 方法的四大支柱](https://www.investors.com/how-to-invest/investors-corner/stock-market-investing-ibd-methodology/)之一。监控行为不正常的头寸并卖出任何触发卖出规则的股票非常重要。
 
 
-[IBD MarketSurge's](https://get.investors.com/marketsurge/?artProdLink=MarketSurge) Breaking Out Today list featured one new stock: **Manhattan Associates** ([MANH](https://research.investors.com/quote.aspx?symbol=MANH)). The Near Pivot list has four stock ideas, and one is Dow Jones media giant **Walt Disney** ([DIS](https://research.investors.com/quote.aspx?symbol=DIS)), which is approaching a 118.63 buy point.
+[IBD MarketSurge's](https://get.investors.com/marketsurge/?artProdLink=MarketSurge) Breaking Out Today list featured one new stock: **Manhattan Associates** ([MANH](https://research.investors.com/quote.aspx?symbol=MANH)). The Near Pivot list has four stock ideas, and one is Dow Jones media giant **Walt Disney** ([DIS](https://research.investors.com/quote.aspx?symbol=DIS)), which is approaching a 118.63 buy point.  
+[IBD MarketSurge 的](https://get.investors.com/marketsurge/?artProdLink=MarketSurge)Breaking Out Today 名单中有一只新股：**Manhattan Associates** （[MANH）。](https://research.investors.com/quote.aspx?symbol=MANH)Near Pivot 列表有四个股票想法，其中一个是道琼斯媒体巨头**华特迪士尼** （[DIS](https://research.investors.com/quote.aspx?symbol=DIS)），它正在接近 118.63 的买入点。
 
 
 
@@ -102,7 +120,8 @@ That means investors should be utilizing diligent [risk management](https://www.
 ---
 
 
-[**The 'Apps' Have It — So Do Palantir And 26 Other Stocks**](https://www.investors.com/research/stock-screener-top-stocks-to-buy-watch/)
+[**The 'Apps' Have It — So Do Palantir And 26 Other Stocks  
+“应用程序”拥有它——Palantir 和其他 26 只股票也是如此**](https://www.investors.com/research/stock-screener-top-stocks-to-buy-watch/)
 
 
 
@@ -110,47 +129,58 @@ That means investors should be utilizing diligent [risk management](https://www.
 ---
 
 
-Stocks Market Leaders: AppFolio, BlackRock, Manhattan
------------------------------------------------------
+Stocks Market Leaders: AppFolio, BlackRock, Manhattan股票市场领导者：AppFolio、BlackRock、Manhattan
+-----------------------------------------------------------------------------------------
 
 
-Stock market leaders to watch include **AppFolio** ([APPF](https://research.investors.com/quote.aspx?symbol=APPF)), **BlackRock** ([BLK](https://research.investors.com/quote.aspx?symbol=BLK)) and Manhattan Associates.
-
-
-
-AppFolio stock is rapidly nearing a 273 [handle entry](https://www.investors.com/how-to-invest/investors-corner/apple-stock-set-up-proper-buy-point-before-big-rally/) following a big rally from the Oct. 24 low, per [IBD MarketSurge chart analysis.](https://get.investors.com/marketsurge/?artProdLink=MarketSurge) AppFolio's cloud-based property management platform includes an artificial intelligence leasing assistant. It features tenant screening, electronic payment, utility management, maintenance contact center and tenant debt collection.
-
-
-BlackRock slipped 0.6% Thursday, falling below a 1,068.34 entry in a four-weeks-tight pattern. [Last week](https://www.investors.com/research/ibd-stock-of-the-day/blackrock-stock-bitcoin-etf/), as the bitcoin price crossed above $100,000, BlackRock's iShares Bitcoin ETF ([IBIT](https://research.investors.com/quote.aspx?symbol=IBIT)) surpassed $50 billion in assets, more than double the size of its nearest ETF competitor.
-
-
-Manhattan Associates rallied 3% Thursday, breaking out past a 306.63 cup-with-handle entry. Atlanta-based Manhattan develops software tools for supply chains, including warehouse management. The stock has gained roughly 38% this year, outpacing a 26.9% gain for the S&P 500. That's after shares jumped 77% in 2023, helped by momentum in the company's shift to [subscription-based software sales.](https://www.investors.com/research/ibd-stock-of-the-day/manh-stock-why-manhattan-associates-is-guarded-on-generative-ai/)
-
-
-[View the General Market Indicators chart page here](https://www.investors.com/wp-content/uploads/2024/12/DailyGMI_121224.pdf).
-
-
-*Be sure to follow Scott Lehtonen on X at [@IBD\_SLehtonen](https://twitter.com/IBD_SLehtonen) for more on the Dow Jones Industrial Average and stock market news.*
+Stock market leaders to watch include **AppFolio** ([APPF](https://research.investors.com/quote.aspx?symbol=APPF)), **BlackRock** ([BLK](https://research.investors.com/quote.aspx?symbol=BLK)) and Manhattan Associates.  
+值得关注的股市领导者包括 **AppFolio** （[APPF](https://research.investors.com/quote.aspx?symbol=APPF)）、**贝莱德** （[BLK](https://research.investors.com/quote.aspx?symbol=BLK)） 和曼哈顿公司。
 
 
 
-
-**YOU MAY ALSO LIKE:**
-
-
-[Check Out IBD's New Exposure Levels To Help You Stay In Step With The Market Trend](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/)
+AppFolio stock is rapidly nearing a 273 [handle entry](https://www.investors.com/how-to-invest/investors-corner/apple-stock-set-up-proper-buy-point-before-big-rally/) following a big rally from the Oct. 24 low, per [IBD MarketSurge chart analysis.](https://get.investors.com/marketsurge/?artProdLink=MarketSurge) AppFolio's cloud-based property management platform includes an artificial intelligence leasing assistant. It features tenant screening, electronic payment, utility management, maintenance contact center and tenant debt collection.  
+根据 [IBD MarketSurge 图表分析](https://get.investors.com/marketsurge/?artProdLink=MarketSurge)，AppFolio 股票从 10 月 24 日的低点大幅反弹后，迅速接近 273 [关口](https://www.investors.com/how-to-invest/investors-corner/apple-stock-set-up-proper-buy-point-before-big-rally/)。AppFolio 基于云的物业管理平台包括一个人工智能租赁助手。它具有租户筛选、电子支付、公用事业管理、维护联络中心和租户债务催收等功能。
 
 
-[Top Growth Stocks To Buy And Watch In Today's Stock Market And Dow Jones](https://www.investors.com/stock-lists/stocks-to-watch-top-rated-ipos-big-caps-and-growth-stocks/)
+BlackRock slipped 0.6% Thursday, falling below a 1,068.34 entry in a four-weeks-tight pattern. [Last week](https://www.investors.com/research/ibd-stock-of-the-day/blackrock-stock-bitcoin-etf/), as the bitcoin price crossed above $100,000, BlackRock's iShares Bitcoin ETF ([IBIT](https://research.investors.com/quote.aspx?symbol=IBIT)) surpassed $50 billion in assets, more than double the size of its nearest ETF competitor.  
+贝莱德周四下跌 0.6%，跌破 1,068.34 点，处于四周的窄幅走势中。[上周](https://www.investors.com/research/ibd-stock-of-the-day/blackrock-stock-bitcoin-etf/)，随着比特币价格突破 100,000 美元，贝莱德的 iShares 比特币 ETF （[IBIT）](https://research.investors.com/quote.aspx?symbol=IBIT) 资产超过 500 亿美元，是其最接近的 ETF 竞争对手的两倍多。
 
 
-[Learn How To Time The Market With IBD's ETF Market Strategy](https://www.investors.com/market-trend/ibds-etf-market-strategy/ibds-etf-market-strategy/)
+Manhattan Associates rallied 3% Thursday, breaking out past a 306.63 cup-with-handle entry. Atlanta-based Manhattan develops software tools for supply chains, including warehouse management. The stock has gained roughly 38% this year, outpacing a 26.9% gain for the S&P 500. That's after shares jumped 77% in 2023, helped by momentum in the company's shift to [subscription-based software sales.](https://www.investors.com/research/ibd-stock-of-the-day/manh-stock-why-manhattan-associates-is-guarded-on-generative-ai/)  
+曼哈顿公司周四上涨 3%，突破 306.63 杯带把手入场点。总部位于亚特兰大的 Manhattan 为供应链开发软件工具，包括仓库管理。该股今年上涨了约 38%，超过了标准普尔 500 指数 26.9% 的涨幅。此前，该公司股价在 2023 年上涨了 77%，这得益于该公司转向[基于订阅的软件销售](https://www.investors.com/research/ibd-stock-of-the-day/manh-stock-why-manhattan-associates-is-guarded-on-generative-ai/)的势头。
 
 
-[Find The Best Long-Term Investments With IBD Long-Term Leaders](https://www.investors.com/research/ibd-long-term-leaders-screen)
+[View the General Market Indicators chart page here](https://www.investors.com/wp-content/uploads/2024/12/DailyGMI_121224.pdf).  
+[在此处查看 General Market Indicators 图表页面](https://www.investors.com/wp-content/uploads/2024/12/DailyGMI_121224.pdf)。
 
 
-[Spot Buy Points And Sell Signals With MarketSurge Pattern Recognition](https://get.investors.com/marketsurge/?artProdLink=MarketSurge)
+*Be sure to follow Scott Lehtonen on X at [@IBD\_SLehtonen](https://twitter.com/IBD_SLehtonen) for more on the Dow Jones Industrial Average and stock market news.  
+请务必关注 Scott Lehtonen 在 [X at @IBD\_SLehtonen](https://twitter.com/IBD_SLehtonen) 上了解有关道琼斯工业平均指数和股市新闻的更多信息。*
+
+
+
+
+**YOU MAY ALSO LIKE: 您可能还喜欢：**
+
+
+[Check Out IBD's New Exposure Levels To Help You Stay In Step With The Market Trend  
+查看 IBD 的新风险敞口水平，以帮助您紧跟市场趋势](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/)
+
+
+[Top Growth Stocks To Buy And Watch In Today's Stock Market And Dow Jones  
+在今天的股市和道琼斯值得购买和关注的顶级成长股](https://www.investors.com/stock-lists/stocks-to-watch-top-rated-ipos-big-caps-and-growth-stocks/)
+
+
+[Learn How To Time The Market With IBD's ETF Market Strategy  
+了解如何使用 IBD 的 ETF 市场策略把握市场时机](https://www.investors.com/market-trend/ibds-etf-market-strategy/ibds-etf-market-strategy/)
+
+
+[Find The Best Long-Term Investments With IBD Long-Term Leaders  
+与 IBD 长期领导者一起寻找最佳长期投资](https://www.investors.com/research/ibd-long-term-leaders-screen)
+
+
+[Spot Buy Points And Sell Signals With MarketSurge Pattern Recognition  
+使用 MarketSurge 模式识别进行现货买入和卖出信号](https://get.investors.com/marketsurge/?artProdLink=MarketSurge)
 
 
 
