--- a/_columns/The_Big_Picture/zh-cn/2024-12-16.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-12-16.md
@@ -1,7 +1,7 @@
 ---
 layout: content
 title: >-
-  Nasdaq Dominates Stock Market Advance; Do These 3 Charts Indicate A Near-Term Top In 2025?
+  Nasdaq Dominates Stock Market Advance; Do These 3 Charts Indicate A Near-Term Top In 2025?	纳斯达克主导股市上涨;这 3 张图表是否表明 2025 年的近期顶部？
 date: 2024-12-16 19:05 -0800
 author: DAVID SAITO-CHUNG
 ---
@@ -10,67 +10,35 @@ author: DAVID SAITO-CHUNG
 
 
 
-The Nasdaq composite on Monday sent a strong message to stock market watchers: Look at me now, I'm the leader.
+The Nasdaq composite on Monday sent a strong message to stock market watchers: Look at me now, I'm the leader.  
+周一，纳斯达克综合指数向股市观察人士发出了一个强烈的信息：看看现在的我，我是领导者。
 
 
-Now the question is: Will the other key equity indexes follow?
+Now the question is: Will the other key equity indexes follow?  
+现在的问题是：其他关键股票指数会效仿吗？
 
 
-With just 10 trading sessions remaining in the year, keeping a close eye on potential divergence in action between the Nasdaq and other key benchmarks may influence future decisions on how much to allocate to the stock market as 2025 arrives.
-
-
-
-
-Stock Market: Tech Stocks Feel Bullish Vibes
---------------------------------------------
-
-
-On Monday, tech stocks enjoyed more bullish vibes created by a solid quarterly report from semiconductor giant **Broadcom** ([AVGO](https://research.investors.com/quote.aspx?symbol=AVGO)). The Nasdaq composite, up 1.2% to 20,173, raced high enough to knock out the Nov. 13 [distribution day](https://www.investors.com/how-to-invest/investors-corner/how-do-you-spot-a-major-market-top-easy-look-for-heavy-distribution/) due to price gains. Thus, as the Market Pulse table illustrates, the index now has just two relevant distribution days that are on IBD's 25-session rolling count.
-
-
-
-The Nasdaq 100 did slightly better, advancing nearly 1.5%.
-
-
-As of Monday's close, the Nasdaq 100 boasted a brilliant year-to-date gain of 31.3%. The Nasdaq composite stood 34.4% higher over the same time frame, above the S&P 500's 27.3% rally.
+With just 10 trading sessions remaining in the year, keeping a close eye on potential divergence in action between the Nasdaq and other key benchmarks may influence future decisions on how much to allocate to the stock market as 2025 arrives.  
+今年只剩下 10 个交易日，密切关注纳斯达克和其他关键基准之间潜在的行动分歧可能会影响未来在 2025 年到来时向股市配置多少的决策。
 
 
 
 
----
+Stock Market: Tech Stocks Feel Bullish Vibes股市：科技股感受到看涨氛围
+---------------------------------------------------------
 
 
-[**In The Nasdaq: This Big Leader Sells Off On Chip Overheating Issue**](https://www.investors.com/news/technology/nvidia-stock-sell-zone-power-chip-overheating-issue/)
+On Monday, tech stocks enjoyed more bullish vibes created by a solid quarterly report from semiconductor giant **Broadcom** ([AVGO](https://research.investors.com/quote.aspx?symbol=AVGO)). The Nasdaq composite, up 1.2% to 20,173, raced high enough to knock out the Nov. 13 [distribution day](https://www.investors.com/how-to-invest/investors-corner/how-do-you-spot-a-major-market-top-easy-look-for-heavy-distribution/) due to price gains. Thus, as the Market Pulse table illustrates, the index now has just two relevant distribution days that are on IBD's 25-session rolling count.  
+周一，半导体巨头**博通** （[AVGO）](https://research.investors.com/quote.aspx?symbol=AVGO) 的稳健季度报告营造出更多的看涨氛围。纳斯达克综合指数上涨 1.2% 至 20,173 点，由于价格上涨，该指数飙升至足以淘汰 11 月 13 日[的分销日](https://www.investors.com/how-to-invest/investors-corner/how-do-you-spot-a-major-market-top-easy-look-for-heavy-distribution/)。因此，正如 Market Pulse 表所示，该指数现在只有两个相关的分发日在 IBD 的 25 个交易日滚动计数中。
 
 
 
-
----
-
-
-![](https://www.investors.com/wp-content/uploads/2024/12/MP121624-.jpg)Numerous computer-related stocks rose sharply on Monday. [Among IBD's 197 industries](https://www.investors.com/ibd-data-tables/), data storage did the best, up 5.5% on a price-weighted basis. Integrated systems, security software, internet content and computer hardware and peripheral firms also helped lead the stock market. These industry groups, as well as specialty enterprise software and fabless semiconductors, gained 2% or more.
+The Nasdaq 100 did slightly better, advancing nearly 1.5%.  
+纳斯达克 100 指数表现略好，上涨近 1.5%。
 
 
-Yet, a motley array of other industry groups also flourished, from oil-and-gas royalty trust companies to meat to cable and satellite telecom. They also helped boost the S&P 500 to a 0.4% gain. At the day's high of 6,085, the 500 is just a fractional gain of taking out its Dec. 6 peak of 6,099.
-
-
-The Russell 2000 rallied 0.6%, but the Dow Jones Industrial Average eased nearly 0.3%.
-
-
-Stock Market: Strength From S&P, Nasdaq
----------------------------------------
-
-
-Notice on a daily chart how the S&P 500, like the Nasdaq, is exuding strength technically. That is, since a two-day sell-off on Nov. 14 and 15 pushed the large-cap benchmark to its [21-day exponential moving average](https://www.investors.com/how-to-invest/investors-corner/what-is-the-21-day-exponential-moving-average/), fund managers evidently saw that decline as a fresh buying opportunity.
-
-
-The S&P 500 has glided higher ever since. Its 21-day and 50-day lines are rising in smooth fashion.
-
-
-So, what's the problem with the stock market? A quick look at the New York Stock Exchange composite index indicates some stock market investors are joining the selling side.
-
-
-The composite index, down 0.5% on Monday, notched its seventh loss in eight sessions. The index — punch in zero-NYC in [MarketSurge](https://marketsurge.investors.com/?src=A012BF&_gl=1*1r3utpm*_gcl_au*MTM0OTMxNTg3OS4xNzMzODU4NDg2LjY0NTg3ODExLjE3MzM5NDk2ODAuMTczMzk0OTY3OQ..*_ga*MjA3NTg4MzU4OC4xNzM0MDY0MTIz*_ga_K2H7B9JRSS*MTczNDA5OTMyOS4zLjEuMTczNDA5OTMzNi41My4wLjA.) — also tripped further below its 50-day moving average.
+As of Monday's close, the Nasdaq 100 boasted a brilliant year-to-date gain of 31.3%. The Nasdaq composite stood 34.4% higher over the same time frame, above the S&P 500's 27.3% rally.  
+截至周一收盘，纳斯达克 100 指数年初至今上涨了 31.3%。纳斯达克综合指数在同一时间段内上涨 34.4%，高于标准普尔 500 指数 27.3% 的涨幅。
 
 
 
@@ -78,7 +46,8 @@ The composite index, down 0.5% on Monday, notched its seventh loss in eight sess
 ---
 
 
-[**Microsoft Surpasses An Early Entry: Why It's A Buy Now In December**](https://www.investors.com/research/microsoft-stock-today-msft-stock-buy-december/)
+[**In The Nasdaq: This Big Leader Sells Off On Chip Overheating Issue  
+纳斯达克：这家大龙头因芯片过热问题抛售**](https://www.investors.com/news/technology/nvidia-stock-sell-zone-power-chip-overheating-issue/)
 
 
 
@@ -86,70 +55,36 @@ The composite index, down 0.5% on Monday, notched its seventh loss in eight sess
 ---
 
 
-Three Charts to Watch
----------------------
+![](https://www.investors.com/wp-content/uploads/2024/12/MP121624-.jpg)Numerous computer-related stocks rose sharply on Monday. [Among IBD's 197 industries](https://www.investors.com/ibd-data-tables/), data storage did the best, up 5.5% on a price-weighted basis. Integrated systems, security software, internet content and computer hardware and peripheral firms also helped lead the stock market. These industry groups, as well as specialty enterprise software and fabless semiconductors, gained 2% or more.  
+周一，许多计算机相关股票大幅上涨。[在 IBD 的 197 个行业中](https://www.investors.com/ibd-data-tables/)，数据存储表现最好，按价格加权计算上涨了 5.5%。集成系统、安全软件、互联网内容和计算机硬件以及外围公司也帮助引领了股市。这些行业组以及专业企业软件和无晶圆厂半导体上涨了 2% 或更多。
 
 
-Unlike what was discussed in the Nasdaq, the NYSE composite failed to get buying support at its 21-day exponential moving average during a sharp slide that began on Dec. 5. Now, the NYSE index has recovered nicely during prior drops through the 50-day line in late July to early August, and for just a few days from Halloween through Nov. 2. So, it's worth keeping an eye on how this index behaves in the following days.
+Yet, a motley array of other industry groups also flourished, from oil-and-gas royalty trust companies to meat to cable and satellite telecom. They also helped boost the S&P 500 to a 0.4% gain. At the day's high of 6,085, the 500 is just a fractional gain of taking out its Dec. 6 peak of 6,099.  
+然而，从石油和天然气特许权使用费信托公司到肉类，再到有线电视和卫星电视，其他各式各样的行业团体也蓬勃发展。他们还帮助标准普尔 500 指数上涨了 0.4%。在当天的高点 6,085 点，500 点只是 12 月 6 日高点 6,099 点的一小部分涨幅。
 
 
-Further, contrary to the market cap-weighted S&P 500, the Invesco S&P 500 Equal Weight ([RSP](https://research.investors.com/quote.aspx?symbol=RSP)) exchange traded fund slipped 0.3% on Monday. The fund also registered its seventh loss in eight sessions. A critical test of support at the 50-day line has arisen.
+The Russell 2000 rallied 0.6%, but the Dow Jones Industrial Average eased nearly 0.3%.  
+罗素 2000 指数上涨 0.6%，但道琼斯工业平均指数下跌近 0.3%。
 
 
-A third chart to watch: the Dow Jones transportation average. Seen by some stock market observers as a barometer of the future economy, the Dow transports dropped 0.8% on Monday to 16,580. Like the NYSE composite, it took closed below its [50-day moving average](https://www.investors.com/how-to-invest/investors-corner/what-is-the-50-day-moving-average-when-to-buy-or-sell-growth-stocks/) for the second straight session.
+Stock Market: Strength From S&P, Nasdaq股市：标准普尔、纳斯达克指数走强
+-------------------------------------------------------
 
 
-Transport stock **FedEx** ([FDX](https://research.investors.com/quote.aspx?symbol=FDX)) reports earnings on Thursday. Wall Street expects little to no growth.
+Notice on a daily chart how the S&P 500, like the Nasdaq, is exuding strength technically. That is, since a two-day sell-off on Nov. 14 and 15 pushed the large-cap benchmark to its [21-day exponential moving average](https://www.investors.com/how-to-invest/investors-corner/what-is-the-21-day-exponential-moving-average/), fund managers evidently saw that decline as a fresh buying opportunity.  
+请注意日线图上的标准普尔 500 指数和纳斯达克指数一样，在技术面上是如何散发出强势的。也就是说，自 11 月 14 日和 15 日为期两天的抛售将大盘股基准推至 [21 天指数移动平均线](https://www.investors.com/how-to-invest/investors-corner/what-is-the-21-day-exponential-moving-average/)以来，基金经理显然将这种下跌视为新的买入机会。
 
 
+The S&P 500 has glided higher ever since. Its 21-day and 50-day lines are rising in smooth fashion.  
+此后，标准普尔 500 指数一直在走高。其 21 天和 50 天线正在平稳上升。
 
 
----
+So, what's the problem with the stock market? A quick look at the New York Stock Exchange composite index indicates some stock market investors are joining the selling side.  
+那么，股市有什么问题呢？快速浏览一下纽约证券交易所综合指数，就会发现一些股市投资者正在加入卖出方。
 
 
-[**Options Trading: Trade This FedEx Bull Put Spread, Collect $95 Now**](https://www.investors.com/research/options/fedex-stock-today-bull-put-spread-collects-95/)
-
-
-
-
----
-
-
-Airlines, The Exception Among Transport Stocks?
------------------------------------------------
-
-
-Not all transport stocks have been underperforming the major equity indexes like FedEx this year. FDX is up 12% through Monday. However, airlines such as **United Airlines** ([UAL](https://research.investors.com/quote.aspx?symbol=UAL)), **Alaska Air** ([ALK](https://research.investors.com/quote.aspx?symbol=ALK)) and **Delta Air Lines** ([DAL](https://research.investors.com/quote.aspx?symbol=DAL)) have flourished amid lower fuel costs and relatively good relations between management and industry personnel this year.
-
-
-
-The gain by UAL has been quite shocking.
-
-
-After the global carrier rolled past a 49.67 [buy point](https://www.investors.com/how-to-invest/investors-corner/chart-reading-basics-how-a-buy-point-marks-a-time-of-opportunity/) on Sept. 12 in a [proper double bottom](https://www.investors.com/how-to-invest/investors-corner/what-is-double-bottom-base-biotech-stocks/), it's really taken off. Gains have at one point exceeded 111%. United Airlines, which closed Monday at 95.48, has flown 131% higher since Jan. 1.
-
-
-Delta, which cleared a [five-month cup with handle](https://www.investors.com/how-to-invest/investors-corner/the-basics-how-to-analyze-a-stocks-cup-with-handle/) at 52.45 on Oct. 14, has pierced through the 20%-25% profit zone from the breakout point. [Selling at least some shares into strength](https://www.investors.com/how-to-invest/investors-corner/how-to-build-long-term-profits-in-stocks-take-many-gains-at-20-25/) is a cornerstone of savvy portfolio management. DAL, at 61.05 and trading nearly 3% above its 50-day line, is up 52% for the year.
-
-
-Baird On Banks And Health Care
-------------------------------
-
-
-At this point, with the American consumer in relatively good shape, the dollar strong vs. overseas currencies, and energy prices sharply off multiyear highs, it seems logical to pay attention to new buy opportunities within the travel space.
-
-
-Todd Sohn, managing director and technical strategist at Strategas, a unit of Baird Wealth Management, suggests staying with investing themes that are working as we approach the new year.
-
-
-"Financials are ranked first in our technical sector rankings. They have great absolute trends and great relative trends. Are they a little bit overbought? Yes," he noted in an interview transcript shared with IBD. "Probabilistically speaking, however, when you get strong trends and overbought conditions, you're going to want to use pullbacks to add exposure."
-
-
-
-The SPDR S&P Regional Banking ([KRE](https://research.investors.com/quote.aspx?symbol=KRE)) ETF has arrived at a key juncture. Having dropped three weeks in a row, it's now testing holders at the rising 10-week moving average.
-
-
-Sohn also called health care a "really interesting space. It's gone from 16% of the S&P (500) to 10% over the last two years. That is a massive drop for a significant weight. You've seen the health care sector outflows really accelerate this year as performance has been challenging. And so, I think if you're looking for a contrarian area, away from financials and some of the more cyclical areas, health care is interesting from that perspective."
+The composite index, down 0.5% on Monday, notched its seventh loss in eight sessions. The index — punch in zero-NYC in [MarketSurge](https://marketsurge.investors.com/?src=A012BF&_gl=1*1r3utpm*_gcl_au*MTM0OTMxNTg3OS4xNzMzODU4NDg2LjY0NTg3ODExLjE3MzM5NDk2ODAuMTczMzk0OTY3OQ..*_ga*MjA3NTg4MzU4OC4xNzM0MDY0MTIz*_ga_K2H7B9JRSS*MTczNDA5OTMyOS4zLjEuMTczNDA5OTMzNi41My4wLjA.) — also tripped further below its 50-day moving average.  
+综合指数周一下跌 0.5%，创下八个交易日以来的第七次下跌。该指数——在 [MarketSurge](https://marketsurge.investors.com/?src=A012BF&_gl=1*1r3utpm*_gcl_au*MTM0OTMxNTg3OS4xNzMzODU4NDg2LjY0NTg3ODExLjE3MzM5NDk2ODAuMTczMzk0OTY3OQ..*_ga*MjA3NTg4MzU4OC4xNzM0MDY0MTIz*_ga_K2H7B9JRSS*MTczNDA5OTMyOS4zLjEuMTczNDA5OTMzNi41My4wLjA.) 中为零——也进一步跌破其 50 天移动平均线。
 
 
 
@@ -157,7 +92,8 @@ Sohn also called health care a "really interesting space. It's gone from 16% of 
 ---
 
 
-[**How This Technical Chart Tool Gives You An Investing Edge**](https://www.investors.com/how-to-invest/investors-corner/what-is-the-21-day-exponential-moving-average/)
+[**Microsoft Surpasses An Early Entry: Why It's A Buy Now In December  
+Microsoft 超越了早期进入：为什么在 12 月立即购买**](https://www.investors.com/research/microsoft-stock-today-msft-stock-buy-december/)
 
 
 
@@ -165,23 +101,122 @@ Sohn also called health care a "really interesting space. It's gone from 16% of 
 ---
 
 
-Eye On Breadth
---------------
+Three Charts to Watch 值得关注的三个图表
+-------------------------------
 
 
-Still, keep an eye on stock market internals, which were certainly mixed on Monday.
+Unlike what was discussed in the Nasdaq, the NYSE composite failed to get buying support at its 21-day exponential moving average during a sharp slide that began on Dec. 5. Now, the NYSE index has recovered nicely during prior drops through the 50-day line in late July to early August, and for just a few days from Halloween through Nov. 2. So, it's worth keeping an eye on how this index behaves in the following days.  
+与纳斯达克指数讨论的情况不同，纽约证券交易所综合指数在 12 月 5 日开始的急剧下滑期间未能在其 21 天指数移动平均线获得买盘支撑。现在，纽约证券交易所指数在 7 月底至 8 月初的 50 天线之前的下跌中恢复良好，从万圣节到 11 月 2 日的短短几天内。因此，值得密切关注该指数在接下来的几天里的表现。
 
 
-While early data showed that advancers edged decliners by fewer than 100 issues on the Nasdaq, losers actually outpaced winners by roughly 3-to-2 on the NYSE.
+Further, contrary to the market cap-weighted S&P 500, the Invesco S&P 500 Equal Weight ([RSP](https://research.investors.com/quote.aspx?symbol=RSP)) exchange traded fund slipped 0.3% on Monday. The fund also registered its seventh loss in eight sessions. A critical test of support at the 50-day line has arisen.  
+此外，与市值加权的标准普尔 500 指数相反，景顺标准普尔 500 等权重 （[RSP](https://research.investors.com/quote.aspx?symbol=RSP)） 交易所交易基金周一下跌 0.3%。该基金还录得八个交易日内的第七次亏损。对 50 日线支撑位的关键测试已经出现。
 
 
-The attached General Market Indicators PDF page below shows 1,393 stocks falling on the NYSE vs. 888 rising. On the Nasdaq, 1,802 rallied while 1,746 retreated. Keep an eye on the Nasdaq's advance-decline line, which is near its lowest level over the past year.
+A third chart to watch: the Dow Jones transportation average. Seen by some stock market observers as a barometer of the future economy, the Dow transports dropped 0.8% on Monday to 16,580. Like the NYSE composite, it took closed below its [50-day moving average](https://www.investors.com/how-to-invest/investors-corner/what-is-the-50-day-moving-average-when-to-buy-or-sell-growth-stocks/) for the second straight session.  
+第三张值得关注的图表：道琼斯运输平均指数。道琼斯运输指数周一下跌 0.8% 至 16,580 点，被一些股市观察家视为未来经济的晴雨表。与纽约证券交易所综合指数一样，它连续第二个交易日收于 [50 天移动平均线](https://www.investors.com/how-to-invest/investors-corner/what-is-the-50-day-moving-average-when-to-buy-or-sell-growth-stocks/)下方。
 
 
-Meanwhile, watch out for leading stocks that clip their 21-day lines. A failure to hold this short-term moving average could presage more profit-taking ahead.
+Transport stock **FedEx** ([FDX](https://research.investors.com/quote.aspx?symbol=FDX)) reports earnings on Thursday. Wall Street expects little to no growth.  
+运输股**联邦快递** （[FDX](https://research.investors.com/quote.aspx?symbol=FDX)） 周四公布财报。华尔街预计几乎没有增长。
 
 
-For short-term traders, a drop through the 21-day exponential moving average could justify taking at least partial profits. **Champion Homes** ([SKY](https://research.investors.com/quote.aspx?symbol=SKY)), **Aris Water** ([ARIS](https://research.investors.com/quote.aspx?symbol=ARIS)) and **Sprouts Farmers Market** ([SFM](https://research.investors.com/quote.aspx?symbol=SFM)) all closed below their 21-day lines in heavy volume on Monday.
+
+
+---
+
+
+[**Options Trading: Trade This FedEx Bull Put Spread, Collect $95 Now  
+期权交易：交易 FedEx Bull Put 价差，立即收取 95 美元**](https://www.investors.com/research/options/fedex-stock-today-bull-put-spread-collects-95/)
+
+
+
+
+---
+
+
+Airlines, The Exception Among Transport Stocks?航空公司，运输股中的例外？
+------------------------------------------------------------
+
+
+Not all transport stocks have been underperforming the major equity indexes like FedEx this year. FDX is up 12% through Monday. However, airlines such as **United Airlines** ([UAL](https://research.investors.com/quote.aspx?symbol=UAL)), **Alaska Air** ([ALK](https://research.investors.com/quote.aspx?symbol=ALK)) and **Delta Air Lines** ([DAL](https://research.investors.com/quote.aspx?symbol=DAL)) have flourished amid lower fuel costs and relatively good relations between management and industry personnel this year.  
+今年，并非所有运输股的表现都落后于联邦快递等主要股指。截至周一，FDX 上涨了 12%。然而，**美国联合航空** （[UAL](https://research.investors.com/quote.aspx?symbol=UAL)）、**阿拉斯加航空** （[ALK](https://research.investors.com/quote.aspx?symbol=ALK)） 和**达美航空** （[DAL](https://research.investors.com/quote.aspx?symbol=DAL)） 等航空公司今年在较低的燃料成本以及管理层和行业人员之间相对较好的关系下蓬勃发展。
+
+
+
+The gain by UAL has been quite shocking.  
+UAL 的收益相当令人震惊。
+
+
+After the global carrier rolled past a 49.67 [buy point](https://www.investors.com/how-to-invest/investors-corner/chart-reading-basics-how-a-buy-point-marks-a-time-of-opportunity/) on Sept. 12 in a [proper double bottom](https://www.investors.com/how-to-invest/investors-corner/what-is-double-bottom-base-biotech-stocks/), it's really taken off. Gains at one point exceeded 111%. United Airlines, which closed Monday at 95.48, has flown 131% higher since Jan. 1.  
+这家全球承运商在 9 月 12 日突破 49.67 [的买入点](https://www.investors.com/how-to-invest/investors-corner/chart-reading-basics-how-a-buy-point-marks-a-time-of-opportunity/)，形成[适当的双底](https://www.investors.com/how-to-invest/investors-corner/what-is-double-bottom-base-biotech-stocks/)后，它真的起飞了。涨幅一度超过 111%。周一收于 95.48 点的联合航空公司自 1 月 1 日以来上涨了 131%。
+
+
+Delta, which cleared a [five-month cup with handle](https://www.investors.com/how-to-invest/investors-corner/the-basics-how-to-analyze-a-stocks-cup-with-handle/) at 52.45 on Oct. 14, has pierced through the 20%-25% profit zone from the breakout point. [Selling at least some shares into strength](https://www.investors.com/how-to-invest/investors-corner/how-to-build-long-term-profits-in-stocks-take-many-gains-at-20-25/) is a cornerstone of savvy portfolio management. DAL, at 61.05 and trading nearly 3% above its 50-day line, is up 52% for the year.  
+达美航空在 10 月 14 日以 52.45 的价格清空了[五个月](https://www.investors.com/how-to-invest/investors-corner/the-basics-how-to-analyze-a-stocks-cup-with-handle/)杯，从突破点突破了 20%-25% 的利润区域。[至少卖出一些股票是](https://www.investors.com/how-to-invest/investors-corner/how-to-build-long-term-profits-in-stocks-take-many-gains-at-20-25/)精明投资组合管理的基石。DAL 报 61.05，交易价格比其 50 天线高出近 3%，今年上涨了 52%。
+
+
+Baird On Banks And Health Care贝尔德谈银行和医疗保健
+-----------------------------------------
+
+
+At this point, with the American consumer in relatively good shape, the dollar strong vs. overseas currencies, and energy prices sharply off multiyear highs, it seems logical to pay attention to new buy opportunities within the travel space.  
+在这一点上，由于美国消费者状况相对较好，美元兑海外货币走强，能源价格从多年高点大幅下跌，关注旅游领域的新买入机会似乎是合乎逻辑的。
+
+
+Todd Sohn, managing director and technical strategist at Strategas, a unit of Baird Wealth Management, suggests staying with investing themes that are working as we approach the new year.  
+Baird Wealth Management 旗下 Strategas 的董事总经理兼技术策略师 Todd Sohn 建议，在新的一年即将到来时，请继续关注有效的投资主题。
+
+
+"Financials are ranked first in our technical sector rankings. They have great absolute trends and great relative trends. Are they a little bit overbought? Yes," he noted in an interview transcript shared with IBD. "Probabilistically speaking, however, when you get strong trends and overbought conditions, you're going to want to use pullbacks to add exposure."  
+“金融在我们的技术行业排名中排名第一。他们有很好的绝对趋势和很好的相对趋势。他们是不是有点超买了？是的，“他在与 IBD 分享的采访记录中指出。“然而，从概率上讲，当你遇到强劲的趋势和超买情况时，你会希望利用回调来增加敞口。”
+
+
+
+The SPDR S&P Regional Banking ([KRE](https://research.investors.com/quote.aspx?symbol=KRE)) ETF has arrived at a key juncture. Having dropped three weeks in a row, it's now testing holders at the rising 10-week moving average.  
+SPDR S&P REGIONAL BANKING （[KRE](https://research.investors.com/quote.aspx?symbol=KRE)） ETF 已进入关键时刻。在连续三周下跌后，它现在正在测试上涨的 10 周移动平均线的持有者。
+
+
+Sohn also called health care a "really interesting space. It's gone from 16% of the S&P (500) to 10% over the last two years. That is a massive drop for a significant weight. You've seen the health care sector outflows really accelerate this year as performance has been challenging. And so, I think if you're looking for a contrarian area, away from financials and some of the more cyclical areas, health care is interesting from that perspective."  
+Sohn 还称医疗保健是一个“非常有趣的领域。在过去两年中，它从标准普尔 （500） 的 16% 下降到 10%。对于一个显著的重量来说，这是一个巨大的下降。您已经看到，由于业绩一直充满挑战，今年医疗保健行业的资金流出确实加速了。因此，我认为，如果你正在寻找一个逆向领域，远离金融和一些更具周期性的领域，那么从这个角度来看，医疗保健会很有趣。
+
+
+
+
+---
+
+
+[**How This Technical Chart Tool Gives You An Investing Edge  
+此技术图表工具如何为您带来投资优势**](https://www.investors.com/how-to-invest/investors-corner/what-is-the-21-day-exponential-moving-average/)
+
+
+
+
+---
+
+
+Eye On Breadth 关注广度
+-------------------
+
+
+Still, keep an eye on stock market internals, which were certainly mixed on Monday.  
+不过，请密切关注股市内部情况，周一肯定喜忧参半。
+
+
+While early data showed that advancers edged decliners by fewer than 100 issues on the Nasdaq, losers actually outpaced winners by roughly 3-to-2 on the NYSE.  
+虽然早期数据显示，纳斯达克的涨幅比下跌的股票少 100 只，但实际上在纽约证券交易所，下跌的股票大约比赢家高出 3 比 2。
+
+
+The attached General Market Indicators PDF page below shows 1,393 stocks falling on the NYSE vs. 888 rising. On the Nasdaq, 1,802 rallied while 1,746 retreated. Keep an eye on the Nasdaq's advance-decline line, which is near its lowest level over the past year.  
+下面随附的一般市场指标 PDF 页面显示，纽约证券交易所有 1,393 只股票下跌，而 888 只股票上涨。在纳斯达克，1,802 只上涨，1,746 只下跌。密切关注纳斯达克的涨跌线，该线接近过去一年的最低水平。
+
+
+Meanwhile, watch out for leading stocks that clip their 21-day lines. A failure to hold this short-term moving average could presage more profit-taking ahead.  
+同时，请留意那些削减 21 天线的领先股票。未能守住这条短期移动平均线可能预示着未来会出现更多的获利回吐。
+
+
+For short-term traders, a drop through the 21-day exponential moving average could justify taking at least partial profits. **Champion Homes** ([SKY](https://research.investors.com/quote.aspx?symbol=SKY)), **Aris Water** ([ARIS](https://research.investors.com/quote.aspx?symbol=ARIS)) and **Sprouts Farmers Market** ([SFM](https://research.investors.com/quote.aspx?symbol=SFM)) all closed below their 21-day lines in heavy volume on Monday.  
+对于短期交易者来说，跌破 21 天指数移动平均线可以证明至少获得部分利润是合理的。**Champion Homes** （[SKY](https://research.investors.com/quote.aspx?symbol=SKY)）、**Aris Water** （[ARIS](https://research.investors.com/quote.aspx?symbol=ARIS)） 和 **Sprouts Farmers Market** （[SFM](https://research.investors.com/quote.aspx?symbol=SFM)） 周一均收于其 21 天线以下。
 
 
 Meanwhile, the yield on the key U.S. 10-year Treasury bond held steady at 4.39% Monday.
