--- a/_columns/The_Big_Picture/zh-cn/2024-12-12.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-12-12.md
@@ -21,11 +21,11 @@ The Dow Jones industrials and S&P 500 both dropped 0.5%, while the tech-heavy Na
 
 
 Volume rose on the Nasdaq, and was lower on the New York Stock Exchange from Wednesday's session. That created a new [distribution day](https://www.investors.com/how-to-invest/investors-corner/stock-market-timing-the-subtle-sign-of-market-tops/) for the Nasdaq, taking its count to three, which matches the S&P 500's distribution.  
-纳斯达克的成交量上升，纽约证券交易所的成交量从周三的交易时段开始走低。这为纳斯达克创造了一个新的[分配日](https://www.investors.com/how-to-invest/investors-corner/stock-market-timing-the-subtle-sign-of-market-tops/)，使其数量达到三个，这与标准普尔 500 指数的分配相匹配。
+纳斯达克的成交量上升，纽约证券交易所的成交量从周三的交易时段开始走低。这为纳斯达克创造了一个新的[分配日](https://www.investors.com/how-to-invest/investors-corner/stock-market-timing-the-subtle-sign-of-market-tops/)，使其数量达到三个，与标准普尔 500 指数的分配相匹配。
 
 
 While that number remains tolerable, bears clearly were in control. Declining stocks topped advancers by nearly 3-to-1 on the NYSE and by about 13-to-5 on the Nasdaq, according to FactSet.  
-虽然这个数字仍然可以容忍，但熊显然处于控制之中。根据 FactSet 的数据，纽约证券交易所下跌的股票以近 3 比 1 的比分领先于上涨的股票，在纳斯达克以约 13 比 5 的比分领先。
+虽然这个数字仍然可以容忍，但熊显然处于控制之中。根据 FactSet 的数据，纽约证券交易所下跌的股票以近 3 比 1 的比分领先，在纳斯达克以约 13 比 5 的比分领先。
 
 
 This week delivered two inflation reports that pretty much cleared the path for a [Federal Reserve rate cut](https://www.investors.com/news/economy/federal-reserve-rate-cut-cpi-ppi-jobless-claims-sp-500/) next week. And policymakers are going to feel much better about cutting rates after Thursday's producer price index, which was hot on the surface but showed tepid inflation in health care services and other categories that feed into the Fed's primary inflation rate.  
