--- a/_columns/The_Big_Picture/zh-cn/2024-12-13.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-12-13.md
@@ -48,8 +48,7 @@ The mixed picture means central bankers are almost certain to follow through wit
 喜忧参半的形势意味着央行行长们几乎肯定会在周二和周三的联邦公开市场委员会会议上降息 25 个基点。与往常一样，美联储主席杰罗姆鲍威尔在会后新闻发布会上采用的语气肯定会影响股市。
 
 
-But there is a slew of other economic data due in the coming week. The Empire State manufacturing survey drops Monday, retail sales data come Tuesday, the latest housing starts reading comes Wednesday and initial jobless claims drop Thursday. With the specter of persistent inflation looming, the personal consumption expenditures price index reading for November, due Friday, is also important.  
-但未来一周将公布大量其他经济数据。帝国州制造业调查周一下降，零售销售数据周二公布，周三公布最新住房开工数据，周四首次申请失业救济人数下降。随着持续通胀的幽灵迫在眉睫，将于周五公布的 11 月个人消费支出价格指数读数也很重要。
+But there is a slew of other economic data due in the coming week. The Empire State manufacturing survey drops Monday, retail sales data come Tuesday, the latest housing starts reading comes Wednesday and initial jobless claims drop Thursday. With the specter of persistent inflation looming, the personal consumption expenditures price index reading for November, due Friday, is also important.  
 
 
 Some noteworthy firms also post [quarterly reports next week](https://www.investors.com/research/earnings-preview/nike-stock-harsh-downtrend-ahead-of-earnings-new-ceo-aims-for-turnaround/), even as earnings season winds down. Dow Jones giant **Nike** ([NKE](https://research.investors.com/quote.aspx?symbol=NKE)), **FedEx** ([FDX](https://research.investors.com/quote.aspx?symbol=FDX)), Warren Buffett stock **Heico** ([HEI](https://research.investors.com/quote.aspx?symbol=HEI)) and **Micron Technology** ([MU](https://research.investors.com/quote.aspx?symbol=MU)) are all due.  
@@ -65,35 +64,28 @@ A majority of the [S&P 500 sectors ended Friday lower](https://www.investors.com
 
 
 
-Investors could get a more granular insight into the [action on the stock market today](https://www.investors.com/news/stock-market-today-stock-market-news/) by examining the relative performance of Investor's Business Daily's 197 industry groups.  
-投资者可以通过研究 Investor's Business Daily 的 197 个行业团体的相对表现，更细致地了解[当今股市的走势](https://www.investors.com/news/stock-market-today-stock-market-news/)。
+Investors could get a more granular insight into the [action on the stock market today](https://www.investors.com/news/stock-market-today-stock-market-news/) by examining the relative performance of Investor's Business Daily's 197 industry groups.  
 
 
-Home furnishing plays, boosted by a sunny outlook from luxury retailer **RH** ([RH](https://research.investors.com/quote.aspx?symbol=RH)), drug stores, fiber-optics stocks and automakers were among the best performers.  
-在奢侈品零售商 **RH** （[RH）](https://research.investors.com/quote.aspx?symbol=RH) 阳光明媚前景的提振下，家居用品板块表现最佳。
+Home furnishing plays, boosted by a sunny outlook from luxury retailer **RH** ([RH](https://research.investors.com/quote.aspx?symbol=RH)), drug stores, fiber-optics stocks and automakers were among the best performers.  
 
 
-Fabless chip plays also outperformed, aided by group giant Broadcom, whose price jumped by nearly a quarter after the firm beat fourth-quarter earnings views. Artificial intelligence-related revenues more than tripled and the company [forecast that AI chip sales would surge](https://www.investors.com/news/technology/broadcom-stock-avgo-stock-massive-ai-chip-opportunity/) over the next three years  
-在集团巨头博通（Broadcom）的帮助下，无晶圆厂芯片公司也表现出色，该公司在第四季度的收益预期超过预期后，其股价上涨了近四分之一。人工智能相关收入增长了两倍多，该公司[预测 AI 芯片销量将在未来三年内激增](https://www.investors.com/news/technology/broadcom-stock-avgo-stock-massive-ai-chip-opportunity/)
+Fabless chip plays also outperformed, aided by group giant Broadcom, whose price jumped by nearly a quarter after the firm beat fourth-quarter earnings views. Artificial intelligence-related revenues more than tripled and the company [forecast that AI chip sales would surge](https://www.investors.com/news/technology/broadcom-stock-avgo-stock-massive-ai-chip-opportunity/) over the next three years  
 
 
-One the flip side, department stores, office supply retailers, steel producers, toy companies and database software plays all struggled.  
-另一方面，百货公司、办公用品零售商、钢铁生产商、玩具公司和数据库软件公司都陷入困境。
+One the flip side, department stores, office supply retailers, steel producers, toy companies and database software plays all struggled.  
 
 
-[View the General Market Indicators chart page here](https://www.investors.com/wp-content/uploads/2024/12/DailyGMI_121324.pdf).  
-[在此处查看 General Market Indicators 图表页面](https://www.investors.com/wp-content/uploads/2024/12/DailyGMI_121324.pdf)。
+[View the General Market Indicators chart page here](https://www.investors.com/wp-content/uploads/2024/12/DailyGMI_121324.pdf).  
 
 
-*Please follow Michael Larkin on X at [@IBD\_MLarkin](https://twitter.com/IBD_MLarkin) for more analysis of growth stocks.  
-请关注 Michael Larkin 在 X at [@IBD\_MLarkin](https://twitter.com/IBD_MLarkin) 上的更多分析。*
+*Please follow Michael Larkin on X at [@IBD\_MLarkin](https://twitter.com/IBD_MLarkin) for more analysis of growth stocks.* 
 
 
-**YOU MAY ALSO LIKE: 您可能还喜欢：**
+**YOU MAY ALSO LIKE:** 
 
 
-[IBD Stock Of The Day Is Flexing Big Tech Muscles  
-今日 IBD 股票正在展示大型科技股的实力](https://www.investors.com/research/ibd-stock-of-the-day/google-stock-googl-quantum-computing-waymo-youtube-2025/)
+[IBD Stock Of The Day Is Flexing Big Tech Muscles](https://www.investors.com/research/ibd-stock-of-the-day/google-stock-googl-quantum-computing-waymo-youtube-2025/) 
 
 
 [Why OpenAI, Anthropic Face Tough AI Showdown With Big Tech  
