--- a/_columns/The_Big_Picture/zh-cn/2024-12-16.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-12-16.md
@@ -24,21 +24,18 @@ With just 10 trading sessions remaining in the year, keeping a close eye on pote
 
 
 
-Stock Market: Tech Stocks Feel Bullish Vibes股市：科技股感受到看涨氛围
----------------------------------------------------------
+Stock Market: Tech Stocks Feel Bullish Vibes
+--------------------------------------------
 
 
-On Monday, tech stocks enjoyed more bullish vibes created by a solid quarterly report from semiconductor giant **Broadcom** ([AVGO](https://research.investors.com/quote.aspx?symbol=AVGO)). The Nasdaq composite, up 1.2% to 20,173, raced high enough to knock out the Nov. 13 [distribution day](https://www.investors.com/how-to-invest/investors-corner/how-do-you-spot-a-major-market-top-easy-look-for-heavy-distribution/) due to price gains. Thus, as the Market Pulse table illustrates, the index now has just two relevant distribution days that are on IBD's 25-session rolling count.  
-周一，半导体巨头**博通** （[AVGO）](https://research.investors.com/quote.aspx?symbol=AVGO) 的稳健季度报告营造出更多的看涨氛围。纳斯达克综合指数上涨 1.2% 至 20,173 点，由于价格上涨，该指数飙升至足以淘汰 11 月 13 日[的分销日](https://www.investors.com/how-to-invest/investors-corner/how-do-you-spot-a-major-market-top-easy-look-for-heavy-distribution/)。因此，正如 Market Pulse 表所示，该指数现在只有两个相关的分发日在 IBD 的 25 个交易日滚动计数中。
+On Monday, tech stocks enjoyed more bullish vibes created by a solid quarterly report from semiconductor giant **Broadcom** ([AVGO](https://research.investors.com/quote.aspx?symbol=AVGO)). The Nasdaq composite, up 1.2% to 20,173, raced high enough to knock out the Nov. 13 [distribution day](https://www.investors.com/how-to-invest/investors-corner/how-do-you-spot-a-major-market-top-easy-look-for-heavy-distribution/) due to price gains. Thus, as the Market Pulse table illustrates, the index now has just two relevant distribution days that are on IBD's 25-session rolling count.  
 
 
 
-The Nasdaq 100 did slightly better, advancing nearly 1.5%.  
-纳斯达克 100 指数表现略好，上涨近 1.5%。
+The Nasdaq 100 did slightly better, advancing nearly 1.5%.  
 
 
-As of Monday's close, the Nasdaq 100 boasted a brilliant year-to-date gain of 31.3%. The Nasdaq composite stood 34.4% higher over the same time frame, above the S&P 500's 27.3% rally.  
-截至周一收盘，纳斯达克 100 指数年初至今上涨了 31.3%。纳斯达克综合指数在同一时间段内上涨 34.4%，高于标准普尔 500 指数 27.3% 的涨幅。
+As of Monday's close, the Nasdaq 100 boasted a brilliant year-to-date gain of 31.3%. The Nasdaq composite stood 34.4% higher over the same time frame, above the S&P 500's 27.3% rally.  
 
 
 
@@ -46,8 +43,7 @@ As of Monday's close, the Nasdaq 100 boasted a brilliant year-to-date gain of 31
 ---
 
 
-[**In The Nasdaq: This Big Leader Sells Off On Chip Overheating Issue  
-纳斯达克：这家大龙头因芯片过热问题抛售**](https://www.investors.com/news/technology/nvidia-stock-sell-zone-power-chip-overheating-issue/)
+[**In The Nasdaq: This Big Leader Sells Off On Chip Overheating Issue**](https://www.investors.com/news/technology/nvidia-stock-sell-zone-power-chip-overheating-issue/) 
 
 
 
@@ -55,36 +51,29 @@ As of Monday's close, the Nasdaq 100 boasted a brilliant year-to-date gain of 31
 ---
 
 
-![](https://www.investors.com/wp-content/uploads/2024/12/MP121624-.jpg)Numerous computer-related stocks rose sharply on Monday. [Among IBD's 197 industries](https://www.investors.com/ibd-data-tables/), data storage did the best, up 5.5% on a price-weighted basis. Integrated systems, security software, internet content and computer hardware and peripheral firms also helped lead the stock market. These industry groups, as well as specialty enterprise software and fabless semiconductors, gained 2% or more.  
-周一，许多计算机相关股票大幅上涨。[在 IBD 的 197 个行业中](https://www.investors.com/ibd-data-tables/)，数据存储表现最好，按价格加权计算上涨了 5.5%。集成系统、安全软件、互联网内容和计算机硬件以及外围公司也帮助引领了股市。这些行业组以及专业企业软件和无晶圆厂半导体上涨了 2% 或更多。
+![](https://www.investors.com/wp-content/uploads/2024/12/MP121624-.jpg)Numerous computer-related stocks rose sharply on Monday. [Among IBD's 197 industries](https://www.investors.com/ibd-data-tables/), data storage did the best, up 5.5% on a price-weighted basis. Integrated systems, security software, internet content and computer hardware and peripheral firms also helped lead the stock market. These industry groups, as well as specialty enterprise software and fabless semiconductors, gained 2% or more.  
 
 
-Yet, a motley array of other industry groups also flourished, from oil-and-gas royalty trust companies to meat to cable and satellite telecom. They also helped boost the S&P 500 to a 0.4% gain. At the day's high of 6,085, the 500 is just a fractional gain of taking out its Dec. 6 peak of 6,099.  
-然而，从石油和天然气特许权使用费信托公司到肉类，再到有线电视和卫星电视，其他各式各样的行业团体也蓬勃发展。他们还帮助标准普尔 500 指数上涨了 0.4%。在当天的高点 6,085 点，500 点只是 12 月 6 日高点 6,099 点的一小部分涨幅。
+Yet, a motley array of other industry groups also flourished, from oil-and-gas royalty trust companies to meat to cable and satellite telecom. They also helped boost the S&P 500 to a 0.4% gain. At the day's high of 6,085, the 500 is just a fractional gain of taking out its Dec. 6 peak of 6,099.  
 
 
-The Russell 2000 rallied 0.6%, but the Dow Jones Industrial Average eased nearly 0.3%.  
-罗素 2000 指数上涨 0.6%，但道琼斯工业平均指数下跌近 0.3%。
+The Russell 2000 rallied 0.6%, but the Dow Jones Industrial Average eased nearly 0.3%.  
 
 
-Stock Market: Strength From S&P, Nasdaq股市：标准普尔、纳斯达克指数走强
--------------------------------------------------------
+Stock Market: Strength From S&P, Nasdaq
+---------------------------------------
 
 
-Notice on a daily chart how the S&P 500, like the Nasdaq, is exuding strength technically. That is, since a two-day sell-off on Nov. 14 and 15 pushed the large-cap benchmark to its [21-day exponential moving average](https://www.investors.com/how-to-invest/investors-corner/what-is-the-21-day-exponential-moving-average/), fund managers evidently saw that decline as a fresh buying opportunity.  
-请注意日线图上的标准普尔 500 指数和纳斯达克指数一样，在技术面上是如何散发出强势的。也就是说，自 11 月 14 日和 15 日为期两天的抛售将大盘股基准推至 [21 天指数移动平均线](https://www.investors.com/how-to-invest/investors-corner/what-is-the-21-day-exponential-moving-average/)以来，基金经理显然将这种下跌视为新的买入机会。
+Notice on a daily chart how the S&P 500, like the Nasdaq, is exuding strength technically. That is, since a two-day sell-off on Nov. 14 and 15 pushed the large-cap benchmark to its [21-day exponential moving average](https://www.investors.com/how-to-invest/investors-corner/what-is-the-21-day-exponential-moving-average/), fund managers evidently saw that decline as a fresh buying opportunity.  
 
 
-The S&P 500 has glided higher ever since. Its 21-day and 50-day lines are rising in smooth fashion.  
-此后，标准普尔 500 指数一直在走高。其 21 天和 50 天线正在平稳上升。
+The S&P 500 has glided higher ever since. Its 21-day and 50-day lines are rising in smooth fashion.  
 
 
-So, what's the problem with the stock market? A quick look at the New York Stock Exchange composite index indicates some stock market investors are joining the selling side.  
-那么，股市有什么问题呢？快速浏览一下纽约证券交易所综合指数，就会发现一些股市投资者正在加入卖出方。
+So, what's the problem with the stock market? A quick look at the New York Stock Exchange composite index indicates some stock market investors are joining the selling side.  
 
 
-The composite index, down 0.5% on Monday, notched its seventh loss in eight sessions. The index — punch in zero-NYC in [MarketSurge](https://marketsurge.investors.com/?src=A012BF&_gl=1*1r3utpm*_gcl_au*MTM0OTMxNTg3OS4xNzMzODU4NDg2LjY0NTg3ODExLjE3MzM5NDk2ODAuMTczMzk0OTY3OQ..*_ga*MjA3NTg4MzU4OC4xNzM0MDY0MTIz*_ga_K2H7B9JRSS*MTczNDA5OTMyOS4zLjEuMTczNDA5OTMzNi41My4wLjA.) — also tripped further below its 50-day moving average.  
-综合指数周一下跌 0.5%，创下八个交易日以来的第七次下跌。该指数——在 [MarketSurge](https://marketsurge.investors.com/?src=A012BF&_gl=1*1r3utpm*_gcl_au*MTM0OTMxNTg3OS4xNzMzODU4NDg2LjY0NTg3ODExLjE3MzM5NDk2ODAuMTczMzk0OTY3OQ..*_ga*MjA3NTg4MzU4OC4xNzM0MDY0MTIz*_ga_K2H7B9JRSS*MTczNDA5OTMyOS4zLjEuMTczNDA5OTMzNi41My4wLjA.) 中为零——也进一步跌破其 50 天移动平均线。
+The composite index, down 0.5% on Monday, notched its seventh loss in eight sessions. The index — punch in zero-NYC in [MarketSurge](https://marketsurge.investors.com/?src=A012BF&_gl=1*1r3utpm*_gcl_au*MTM0OTMxNTg3OS4xNzMzODU4NDg2LjY0NTg3ODExLjE3MzM5NDk2ODAuMTczMzk0OTY3OQ..*_ga*MjA3NTg4MzU4OC4xNzM0MDY0MTIz*_ga_K2H7B9JRSS*MTczNDA5OTMyOS4zLjEuMTczNDA5OTMzNi41My4wLjA.) — also tripped further below its 50-day moving average.  
 
 
 
@@ -92,8 +81,7 @@ The composite index, down 0.5% on Monday, notched its seventh loss in eight sess
 ---
 
 
-[**Microsoft Surpasses An Early Entry: Why It's A Buy Now In December  
-Microsoft 超越了早期进入：为什么在 12 月立即购买**](https://www.investors.com/research/microsoft-stock-today-msft-stock-buy-december/)
+[**Microsoft Surpasses An Early Entry: Why It's A Buy Now In December**](https://www.investors.com/research/microsoft-stock-today-msft-stock-buy-december/) 
 
 
 
@@ -101,20 +89,18 @@ Microsoft 超越了早期进入：为什么在 12 月立即购买**](https://www
 ---
 
 
-Three Charts to Watch 值得关注的三个图表
--------------------------------
+Three Charts to Watch
+---------------------
 
 
-Unlike what was discussed in the Nasdaq, the NYSE composite failed to get buying support at its 21-day exponential moving average during a sharp slide that began on Dec. 5. Now, the NYSE index has recovered nicely during prior drops through the 50-day line in late July to early August, and for just a few days from Halloween through Nov. 2. So, it's worth keeping an eye on how this index behaves in the following days.  
-与纳斯达克指数讨论的情况不同，纽约证券交易所综合指数在 12 月 5 日开始的急剧下滑期间未能在其 21 天指数移动平均线获得买盘支撑。现在，纽约证券交易所指数在 7 月底至 8 月初的 50 天线之前的下跌中恢复良好，从万圣节到 11 月 2 日的短短几天内。因此，值得密切关注该指数在接下来的几天里的表现。
+Unlike what was discussed in the Nasdaq, the NYSE composite failed to get buying support at its 21-day exponential moving average during a sharp slide that began on Dec. 5. Now, the NYSE index has recovered nicely during prior drops through the 50-day line in late July to early August, and for just a few days from Halloween through Nov. 2. So, it's worth keeping an eye on how this index behaves in the following days.  
 
 
 Further, contrary to the market cap-weighted S&P 500, the Invesco S&P 500 Equal Weight ([RSP](https://research.investors.com/quote.aspx?symbol=RSP)) exchange traded fund slipped 0.3% on Monday. The fund also registered its seventh loss in eight sessions. A critical test of support at the 50-day line has arisen.  
 此外，与市值加权的标准普尔 500 指数相反，景顺标准普尔 500 等权重 （[RSP](https://research.investors.com/quote.aspx?symbol=RSP)） 交易所交易基金周一下跌 0.3%。该基金还录得八个交易日内的第七次亏损。对 50 日线支撑位的关键测试已经出现。
 
 
-A third chart to watch: the Dow Jones transportation average. Seen by some stock market observers as a barometer of the future economy, the Dow transports dropped 0.8% on Monday to 16,580. Like the NYSE composite, it took closed below its [50-day moving average](https://www.investors.com/how-to-invest/investors-corner/what-is-the-50-day-moving-average-when-to-buy-or-sell-growth-stocks/) for the second straight session.  
-第三张值得关注的图表：道琼斯运输平均指数。道琼斯运输指数周一下跌 0.8% 至 16,580 点，被一些股市观察家视为未来经济的晴雨表。与纽约证券交易所综合指数一样，它连续第二个交易日收于 [50 天移动平均线](https://www.investors.com/how-to-invest/investors-corner/what-is-the-50-day-moving-average-when-to-buy-or-sell-growth-stocks/)下方。
+A third chart to watch: the Dow Jones transportation average. Seen by some stock market observers as a barometer of the future economy, the Dow transports dropped 0.8% on Monday to 16,580. Like the NYSE composite, it took closed below its [50-day moving average](https://www.investors.com/how-to-invest/investors-corner/what-is-the-50-day-moving-average-when-to-buy-or-sell-growth-stocks/) for the second straight session.  
 
 
 Transport stock **FedEx** ([FDX](https://research.investors.com/quote.aspx?symbol=FDX)) reports earnings on Thursday. Wall Street expects little to no growth.  
@@ -219,25 +205,30 @@ For short-term traders, a drop through the 21-day exponential moving average cou
 对于短期交易者来说，跌破 21 天指数移动平均线可以证明至少获得部分利润是合理的。**Champion Homes** （[SKY](https://research.investors.com/quote.aspx?symbol=SKY)）、**Aris Water** （[ARIS](https://research.investors.com/quote.aspx?symbol=ARIS)） 和 **Sprouts Farmers Market** （[SFM](https://research.investors.com/quote.aspx?symbol=SFM)） 周一均收于其 21 天线以下。
 
 
-Meanwhile, the yield on the key U.S. 10-year Treasury bond held steady at 4.39% Monday.
+Meanwhile, the yield on the key U.S. 10-year Treasury bond held steady at 4.39% Monday.  
+与此同时，美国主要 10 年期国债收益率周一稳定在 4.39%。
 
 
-[View General Market Indicators chart page here.](https://www.investors.com/wp-content/uploads/2024/12/DailyGMI_121624.pdf)
+[View General Market Indicators chart page here.  
+在此处查看一般市场指标图表页面。](https://www.investors.com/wp-content/uploads/2024/12/DailyGMI_121624.pdf)
 
 
-*Please follow Chung on X/Twitter:* [*@saitochung*](https://twitter.com/SaitoChung) *and* [*@IBD\_DChung*](https://twitter.com/IBD_DChung)
+*Please follow Chung on X/Twitter:* [*@saitochung*](https://twitter.com/SaitoChung) *and* [*@IBD\_DChung*](https://twitter.com/IBD_DChung)  
+*请在 X/Twitter 上关注 Chung：*[*@saitochung*](https://twitter.com/SaitoChung) *和* [*@IBD\_DChung*](https://twitter.com/IBD_DChung)
 
 
-**YOU MIGHT ALSO LIKE:**
+**YOU MIGHT ALSO LIKE: 您可能还喜欢：**
 
 
-[Investor's Corner: What Is Average True Range?](https://www.investors.com/how-to-invest/investors-corner/average-true-range-growth-stocks-analysis/)
+[Investor's Corner: What Is Average True Range?  
+投资者角：什么是平均真实范围？](https://www.investors.com/how-to-invest/investors-corner/average-true-range-growth-stocks-analysis/)
 
 
-[The Latest IBD Podcast](https://get.investors.com/podcast/?src=A00511A)
+[The Latest IBD Podcast 最新的 IBD 播客](https://get.investors.com/podcast/?src=A00511A)
 
 
-[Want To Find New Breakouts? Consult This List Each Day](https://research.investors.com/stocksonthemove.aspx)
+[Want To Find New Breakouts? Consult This List Each Day  
+想找到新的突破吗？每天查阅此列表](https://research.investors.com/stocksonthemove.aspx)
 
 
 
